Réalisation compléte de l'affichage du menu, pour tout les restaurant

--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -20,7 +20,7 @@
         <img src="../images/logo/ohmyfood.png" alt="Logo Ohmyfood">
     </header>
 
-    <main>
+    <main id="menu">
         <section id="restaurant-header">
             <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
             <div id="nom-du-restaurant">
@@ -32,6 +32,170 @@
                 </div>
             </div>
         </section>
+        <section id="services">
+            <div class="service">
+                <div class="service_titre">
+                    <h2>ENTRÉES</h2>
+                    <div class="soulignement"></div>
+                </div>
+                <div class="service_plats">
+
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Tartare de thon</h2>
+                            <p>Assaisonné au yuzu</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>25€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Bouchée de homard croustillant</h2>
+                            <p>Et sa farandole de petits légumes</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>35€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Velouté de cèpes</h2>
+                            <p>Aux truffes</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>20€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="service">
+                <div class="service_titre">
+                    <h2>PLATS</h2>
+                    <div class="soulignement"></div>
+                </div>
+                <div class="service_plats">
+
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Poulet rôti aux herbes de Provence</h2>
+                            <p>Et sa crème de truffe</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>40€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Langouste rôtie</h2>
+                            <p>Et ses légumes de saison</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>35€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Côte de boeuf Angus</h2>
+                            <p>Et sa purée de panais</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>44€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="service">
+                <div class="service_titre">
+                    <h2>DESSERTS</h2>
+                    <div class="soulignement"></div>
+                </div>
+                <div class="service_plats">
+
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Farandole de desserts</h2>
+                            <p>Du chef</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>18€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Crème brulée</h2>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>22€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Tiramisu</h2>
+                            <p>À la noisette</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>23€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+        <div id="commander">
+            <button class="submit-button">Commander</button>
+        </div>
 
     </main>
 
