--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -20,7 +20,7 @@
         <img src="../images/logo/ohmyfood.png" alt="Logo Ohmyfood">
     </header>
 
-    <main>
+    <main id="menu">
         <section id="restaurant-header">
             <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
             <div id="nom-du-restaurant">
@@ -32,6 +32,170 @@
                 </div>
             </div>
         </section>
+        <section id="services">
+            <div class="service">
+                <div class="service_titre">
+                    <h2>ENTRÉES</h2>
+                    <div class="soulignement"></div>
+                </div>
+                <div class="service_plats">
+
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Tartare de poulpe acidulé</h2>
+                            <p>Aux zestes d'orange</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>25€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Velouté de légumes d'antan</h2>
+                            <p>Carotte, panais, topinambour</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>35€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Soupe à l'oignon</h2>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>20€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="service">
+                <div class="service_titre">
+                    <h2>PLATS</h2>
+                    <div class="soulignement"></div>
+                </div>
+                <div class="service_plats">
+
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Coquilles Saint-Jacques</h2>
+                            <p>Accompagnées d'une purée de panais</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>40€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Magret de canard</h2>
+                            <p>Et parmentier de pommes de terre</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>35€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Pigeonneau d’Ille-et-Vilaine</h2>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>44€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="service">
+                <div class="service_titre">
+                    <h2>DESSERTS</h2>
+                    <div class="soulignement"></div>
+                </div>
+                <div class="service_plats">
+
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Pétales de violettes glacés</h2>
+                            <p>Et purée de noisettes</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>18€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Fondant au chocolat</h2>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>22€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Millefeuille croustillant</h2>
+                            <p>Myrtilles et pâte d’amande</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>23€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+        <div id="commander">
+            <button class="submit-button">Commander</button>
+        </div>
 
     </main>
 
