--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -20,9 +20,9 @@
         <img src="../images/logo/ohmyfood.png" alt="Logo Ohmyfood">
     </header>
 
-    <main>
-        <section id="restaurant-header" class="la-note-enchantee-image">
-            <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+    <main id="menu">
+        <section id="restaurant-header" class="la-note-enchantee">
+            <img class="la-note-enchantee_image" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
             <div id="nom-du-restaurant">
                 <h1>La note enchanntée</h1>
                 
@@ -32,6 +32,184 @@
                 </div>
             </div>
         </section>
+        <section id="services">
+            <div class="service">
+                <div class="service_titre">
+                    <h2>ENTRÉES</h2>
+                    <div class="soulignement"></div>
+                </div>
+                <div class="service_plats">
+
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Ravioles de foie gras</h2>
+                            <p>Accompagnés de leur crème à la truffe</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>25€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Caviar osciètre</h2>
+                            <p>Sur blini à la farine de blé noir</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>35€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Homard et espuma de potiron</h2>
+                            <p>Mariné aux zestes d'orange</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>20€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Foie gras de canard cuit entier</h2>
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>35€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="service">
+                <div class="service_titre">
+                    <h2>PLATS</h2>
+                    <div class="soulignement"></div>
+                </div>
+                <div class="service_plats">
+
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Noix de coquilles Saint-Jacques</h2>
+                            <p>Sur lit de purée de céleri-rave</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>40€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Langoustine poêlée</h2>
+                            <p>Purée de patate douce</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>35€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Mijoté de queue de boeuf</h2>
+                            <p>Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>44€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="service">
+                <div class="service_titre">
+                    <h2>DESSERTS</h2>
+                    <div class="soulignement"></div>
+                </div>
+                <div class="service_plats">
+
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Macaron noisette et chocolat</h2>
+                            <p>Glace au caramel brun et sel de Guérande</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>18€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Baba au rhum revisité</h2>
+                            <p>Avec son coulis de citron</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>22€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Tarte au citron meringuée</h2>
+                            <p>Déstructurée</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>23€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+        <div id="commander">
+            <button class="submit-button">Commander</button>
+        </div>
 
     </main>
 
